Use partials via render templates

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -25,6 +25,14 @@
     </th>
 
     <th>
+      Image URL
+    </th>
+
+    <th>
+      Director ID
+    </th>
+
+    <th>
       Created at
     </th>
 
@@ -48,6 +56,14 @@
 
     <td>
       <%= movie.description %>
+    </td>
+
+    <td>
+      <%= movie.image_url %>
+    </td>
+
+    <td>
+      <%= movie.director_id %>
     </td>
 
     <td>
